discussion/kv_engine/130808/130808_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge branch 'mad-hatter'

* mad-hatter:
  MB-39993: [Ephemeral] Handle delete_time < server startup time

Change-Id: I05f51b4c871428b507d5b73de285ebadb5e5b35d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2020-06-18 11:52:07.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-06-18 12:12:32.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24663/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:2329:80:
error: extraneous ")" before ";"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24663/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28638/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\evp_store_single_threaded_test.cc(2329): error C2059: syntax error: ")" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28638/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2839/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:2329:80: error: extraneous ")" before ";" [clang-diagnostic-error]
        tombstoneTime = sv->toOrderedStoredValue()->getCompletedOrDeletedTime());
                                                                               ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2839/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:2329:80:
error: extraneous ")" before ";" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2839/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4338/ : FAILURE

Compile error at [2020-06-18T11:59:01.241Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:2329:80:
error: expected ?;? before ?)? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4338/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3311/ : FAILURE

Compile error at [2020-06-18T11:56:30.165Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:2329:80:
error: extraneous ")" before ";"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3311/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4199/ : FAILURE

Compile error at [2020-06-18T11:57:35.922Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:2329:80:
error: expected ?;? before ?)? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4199/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4256/ : FAILURE

Compile error at [2020-06-18T11:59:38.679Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:2329:80:
error: expected ?;? before ?)? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4256/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12081/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1343/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
